--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Commit and Push changes
       run: |
         # 1. Identify the bot so Git allows the commit
-        # git config --global user.name "github-actions[bot]"
-        # git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "saecqwe"
+        git config --global user.email "abdullahsf99@gmail.com"
         
         # 2. Stage the specific file that was updated
         git add Datasets/Dataset1.csv
